[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menus/feedback/tickbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/bylight/bylight.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/pause/options/options_menu.gd" type="Script" id=3]
[ext_resource path="res://gui/pause/options/locale_select.gd" type="Script" id=4]
[ext_resource path="res://gui/pause/options/button_menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://gui/pause/options/touch_menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://gui/theme_gui.tres" type="Theme" id=10]

[node name="OptionsMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 10 )
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 634.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="ScrollContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 622.0
margin_bottom = 346.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CameraFix" parent="ScrollContainer/List" instance=ExtResource( 1 )]
margin_right = 620.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="ScrollContainer/List/CameraFix"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Disable camera limiting [Try this if the camera is broken]"

[node name="TouchControls" parent="ScrollContainer/List" instance=ExtResource( 1 )]
margin_top = 24.0
margin_right = 620.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="ScrollContainer/List/TouchControls"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Enable touch controls"

[node name="MuteMusic" parent="ScrollContainer/List" instance=ExtResource( 1 )]
margin_top = 48.0
margin_right = 620.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="ScrollContainer/List/MuteMusic"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Mute music"

[node name="MuteSFX" parent="ScrollContainer/List" instance=ExtResource( 1 )]
margin_top = 72.0
margin_right = 620.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="ScrollContainer/List/MuteSFX"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Mute SFX"

[node name="ShowTimer" parent="ScrollContainer/List" instance=ExtResource( 1 )]
margin_top = 96.0
margin_right = 620.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="ScrollContainer/List/ShowTimer"]
margin_left = 23.0
margin_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Show timer
"

[node name="LocaleSelect" type="OptionButton" parent="ScrollContainer/List"]
margin_top = 120.0
margin_right = 620.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ButtonMenu" parent="ScrollContainer/List" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 156.0
margin_right = 620.0
margin_bottom = 344.0

[node name="TouchMenu" parent="ScrollContainer/List" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 160.0
margin_right = 624.0
margin_bottom = 160.0

[connection signal="item_selected" from="ScrollContainer/List/LocaleSelect" to="ScrollContainer/List/LocaleSelect" method="_on_Locale_item_selected"]
